syntax = "proto3";

package pubbet.v1;

option go_package = "github.com/misshanya/pubbet/gen/go/pubbet/v1;pubbetv1";

service Pubbet {
  rpc PublishMessages(stream PublishMessagesRequest) returns (PublishMessagesResponse);
  rpc ListenMessages(ListenTopicRequest) returns (stream TopicMessages);
}

message PublishMessagesRequest {
  string topic_name = 1;
  bytes message = 2;
}

message PublishMessagesResponse {
  int64 messages_sent = 1;
}

message ListenTopicRequest {
  string topic_name = 1;
}

message TopicMessages {
  bytes message = 1;
}